// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefaultButton /> renders overlay if busy 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#f5a623",
        "borderColor": "#f5a623",
        "borderRadius": 6,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 52,
        "justifyContent": "center",
        "minWidth": 100,
        "overflow": "hidden",
        "paddingHorizontal": 16,
      },
      Object {
        "borderColor": "#FBDBA7",
      },
      Object {},
      undefined,
    ]
  }
  testID="flw-default-button"
>
  <Text>
    Hello, World
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.6)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`<DefaultButton /> renders primary button correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#f5a623",
        "borderColor": "#f5a623",
        "borderRadius": 6,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 52,
        "justifyContent": "center",
        "minWidth": 100,
        "overflow": "hidden",
        "paddingHorizontal": 16,
      },
      Object {},
      Object {},
      undefined,
    ]
  }
  testID="flw-default-button"
>
  <Text>
    Hello, World
  </Text>
</View>
`;

exports[`<DefaultButton /> renders with align left style 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#f5a623",
        "borderColor": "#f5a623",
        "borderRadius": 6,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 52,
        "justifyContent": "center",
        "minWidth": 100,
        "overflow": "hidden",
        "paddingHorizontal": 16,
      },
      Object {},
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
    ]
  }
  testID="flw-default-button"
>
  <Text>
    Hello, World
  </Text>
</View>
`;
